--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,4 +10,5 @@ dependencies = [
     "fastapi[standard]>=0.123.0",
     "requests>=2.32.5",
     "selenium>=4.38.0",
+    "webdriver-manager>=4.0.2",
 ]
