--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "beautifulsoup4>=4.14.2",
     "bs4>=0.0.2",
     "fastapi[standard]>=0.123.0",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.5",
     "selenium>=4.38.0",
+    "supabase>=2.25.0",
 ]
